# sfml-cellular-automata

./: .gitignore  CMakeLists.txt
src/: Application.cpp  Application.hpp  ApplicationState.cpp  ApplicationState.hpp  Button.cpp  Button.hpp  CellularAutomaton.cpp  CellularAutomaton.hpp  EditorState.cpp  EditorState.hpp  GameOfLife.cpp  GameOfLife.hpp  MainMenuState.cpp  MainMenuState.hpp  Map.cpp  Map.hpp  State.cpp  State.hpp  main.cpp
